--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 
     
     <section id="AboutMe">About Me</section>
-    <section>I am a new up and coming developer who has gained a understanding of the field and acquired a great toolbelt and skillset that comes along with it. I have learned a lot about the front end as well as the back end and I have figured out out to balance the two in order to be an ideal canidate for a fullstack position. I have work in many difference industries and I understand that even in the various fields technology serves a major purpose in all of them. I am ready to leverage not only my knowlegde of software and the technology but also my experience of working with different styles of teams. I understand the importance of team work when it comes to development and I am excited to see whats in store.</section>
+    <section id="AboutMeContent">I am a new up and coming developer who has gained a understanding of the field and acquired a great toolbelt and skillset that comes along with it. I have learned a lot about the front end as well as the back end and I have figured out out to balance the two in order to be an ideal canidate for a fullstack position. I have work in many difference industries and I understand that even in the various fields technology serves a major purpose in all of them. I am ready to leverage not only my knowlegde of software and the technology but also my experience of working with different styles of teams. I understand the importance of team work when it comes to development and I am excited to see whats in store.
+    </section>
 
 
     
     <section id="Work">Work</section>
-    <section>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, cupiditate. Illo, quidem non? Consectetur, aliquam. Quia magni animi nisi sequi temporibus illo odio voluptas dolores cum. Aperiam animi non corporis!
+    <section id="WorkContent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, cupiditate. Illo, quidem non? Consectetur, aliquam. Quia magni animi nisi sequi temporibus illo odio voluptas dolores cum. Aperiam animi non corporis!
         Unde vitae minima id dolores veritatis. Aliquam accusantium sit provident est. Fugiat, a, blanditiis esse ea minima sed non amet perspiciatis aspernatur dolores provident laudantium libero inventore pariatur, mollitia rerum?
         Nulla eius odit, repellendus, assumenda fuga dolore molestiae deleniti est quidem eum voluptatibus unde alias reiciendis adipisci dignissimos reprehenderit totam earum, labore obcaecati soluta. Eaque minima optio obcaecati sapiente minus.
         Voluptatem nostrum reiciendis vitae iste nemo enim ipsam saepe ducimus, dicta sint est? Suscipit, numquam at placeat voluptates, deleniti tenetur nisi eos mollitia minus non ducimus. Vel dicta similique culpa.
@@ -68,7 +69,7 @@
 
 
     <section id="Resume">Resume</section>
-    <section></section>
+    <section id="ResumeContent"></section>
 
 
 </main>
