made the links in the nav bar clickable and able to direct to appropriate content when selected. Also added a button for resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#Resume">Resume</a>
                 </li>
                 <li>
-                    <a href="#Contact Me">Contact Me</a>
+                    <a href="#ContactMe">Contact Me</a>
                 </li>
             </ul>
         </nav>
@@ -38,13 +38,13 @@
     <main>
 
     
-    <section id="AboutMe">About Me</section>
+    <article id="AboutMe">About Me</article>
     <section id="AboutMeContent">I am a new up and coming developer who has gained a understanding of the field and acquired a great toolbelt and skillset that comes along with it. I have learned a lot about the front end as well as the back end and I have figured out out to balance the two in order to be an ideal canidate for a fullstack position. I have work in many difference industries and I understand that even in the various fields technology serves a major purpose in all of them. I am ready to leverage not only my knowlegde of software and the technology but also my experience of working with different styles of teams. I understand the importance of team work when it comes to development and I am excited to see whats in store.
     </section>
 
 
     
-    <section id="Work">Work</section>
+    <article id="Work">Work</article>
     <section id="WorkContent">
         <article >
             <img src="./assets/Software-Developer.jpg" id="SoftwareDeveloper" width="width:100%" class="Photo"/>
@@ -70,13 +70,13 @@
 
 
     <section id="Resume">Resume</section>
-    <section id="ResumeContent"></section>
+    <section id="ResumeContent"> <button> Download here: Khalid Gibson (Full Stack Web Developer) Resume <a href=“https://www.resume.com/”></a></button></section>
 
 
 </main>
 
 <footer>
-    <section id="ContactMe">Contact Me</section>
+    <article id="ContactMe">Contact Me</article>
     <section id="ContactMeContent">
         <ul>
             <li>555.555.5555</li>
